--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "dev": "quasar dev --modern",
     "test": "echo \"No test specified\" && exit 0",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
